--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>My First Web App</title>
+  <title>Resume</title>
 
   <!-- link the main css file -->
   <link rel="stylesheet" href="styles/styles.css" />
